fixed the body background color in TagAPrice-blue.css

--- a/src/main/webapp/desktopView/TagAPrice-blue.css
+++ b/src/main/webapp/desktopView/TagAPrice-blue.css
@@ -3,7 +3,7 @@ color background gray: ebe9e1
 
 */
 html {
-    background-color: #43aabe;
+    background-color: #2C2D25;
 }
 
 body {
